
    - In debug output, sort environment variables and print one per line
      (#40703, ryandesign in r113037)

    - Error out on a platform mismatch and refer to migration instructions
      (raimue in r113478)

    - Disable spotlight indexing on build directories, distfiles, registry,
      log files, archives, base source and the default ports tree.
      (cal in r113649)

Release 2.2.1 (2013-10-26 by jmr)
    - Fixed a problem where dependency calculation could sometimes fail for
      ports that only support 32-bit architectures when the configured
      build_arch is 64-bit and dependencies thus need to be +universal
      (#40721, jmr in r112067)

    - Fixed a potential crash in the strsed procedure (toby in r110985)

    - Provide choice of GCC version when compiling with DragonEgg.
      (larryv in r108040)

    - Add Portfile options for setting OBJCXX, OBJCXXFLAGS, and
      universal architecture flags in OBJCFLAGS.
      (#38512, larryv in r107973, r107976, r107987)

    - Add support for autostarting tasks with startupitems after installing.
      Useful for the certsync port. (#35474, cal in r106810, 109245)

Release 2.2.0 (2013-07-23 by jmr)
    - Fixed ports sometimes being incorrectly cleaned after the unarchive
      target is run with newer archives. (jmr in r106717)

    - When rebuilding an installed port, fixed the old copy being removed
      before the new copy has been built. (jmr in r106668)

    - Support deleting selected files and directories before creating a pkg.
      (blair in r105575)

    - Remove unsupported xpkg package type, xar-based format with XML.
      (afb in r105002)

    - Support pattern matching in compiler.blacklist.
      (larryv in r104174, r104178)

    - Workaround for some OS commands hanging on 10.8 when started from a root
      login shell. (#34221, jeremyhu in r104118)

    - TMPDIR is now set to ${workpath}/.tmp while building ports, to avoid